# real-time-metrics-aggregator

./: README.md  docker-compose.yml
aggregator-core/: CMakeLists.txt  Dockerfile
aggregator-core/src/: Aggregator.h  main.cpp
ingestion-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
ingestion-service/config/: default.json
ingestion-service/src/: app.ts  logger.ts  producer.ts  routes.ts  validator.ts
ingestion-service/src/controllers/: messageController.ts
ingestion-service/tests/: ingestion.test.ts
